--- a/hwk1-task3.ipynb
+++ b/hwk1-task3.ipynb
@@ -50,7 +50,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Update this markdown cell with your answer.*"
+    "This data set was used for current and future ML predictions of coral counts in the Western Indian Ocean based on climactic and environmental variables. These include, salinity, chlorophyll-a, dissovled oxygen, etc. \n",
+    "\n",
+    "**Citation**:  \n",
+    "Tim McClanahan. (2023). Western Indian Ocean Coral Diversity. Knowledge Network for Biocomplexity. doi:10.5063/F1K35S3H.\n",
+    "\n",
+    "**Date of Access**: 9 October 2023\n",
+    "\n",
+    "**Data Archive**: https://knb.ecoinformatics.org/view/doi%3A10.5063%2FF1K35S3H"
    ]
   },
   {
@@ -70,15 +77,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['PU_ID', 'PU_Lat', 'PU_Lon', 'Number_of_genera', 'Country', 'Ecoregion',\n",
+      "       'Management', 'Habitat', 'Observer', 'Depth', 'Coralcover',\n",
+      "       'SSTRateofRise', 'PARmax', 'Calcite', 'Dis_oxygen', 'mean.waveNRJ',\n",
+      "       'Salinity_mean', 'andrello_reef_value', 'andrello_nutrients',\n",
+      "       'mean.npp', 'TT_market_hrs', 'TT_pop_hrs', 'cumDHW', 'SST_Kurtosis',\n",
+      "       'SST_Median', 'ChlorA_median', 'andrello_sediments', 'Current_vel_mean',\n",
+      "       'Diff_attenuation', 'Grav_NP', 'Grav_NC', 'PH', 'SST_bimodality',\n",
+      "       'SST_Skewness', 'ClimateStressModel', 'Netflow', 'Indegree',\n",
+      "       'Outdegree', 'Retention', 'min_yr', 'max_yr', 'no_replicates'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PU_ID</th>\n",
+       "      <th>PU_Lat</th>\n",
+       "      <th>PU_Lon</th>\n",
+       "      <th>Number_of_genera</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Ecoregion</th>\n",
+       "      <th>Management</th>\n",
+       "      <th>Habitat</th>\n",
+       "      <th>Observer</th>\n",
+       "      <th>Depth</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SST_bimodality</th>\n",
+       "      <th>SST_Skewness</th>\n",
+       "      <th>ClimateStressModel</th>\n",
+       "      <th>Netflow</th>\n",
+       "      <th>Indegree</th>\n",
+       "      <th>Outdegree</th>\n",
+       "      <th>Retention</th>\n",
+       "      <th>min_yr</th>\n",
+       "      <th>max_yr</th>\n",
+       "      <th>no_replicates</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>39.076711</td>\n",
+       "      <td>-5.490011</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>UnfishedLow</td>\n",
+       "      <td>Crest</td>\n",
+       "      <td>Tim</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.462556</td>\n",
+       "      <td>-0.128136</td>\n",
+       "      <td>0.596375</td>\n",
+       "      <td>0.144498</td>\n",
+       "      <td>98.25</td>\n",
+       "      <td>74.75</td>\n",
+       "      <td>14.00</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>39.076711</td>\n",
+       "      <td>-5.490011</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>UnfishedLow</td>\n",
+       "      <td>Lagoon/Back reef</td>\n",
+       "      <td>Nyawira</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.462556</td>\n",
+       "      <td>-0.128136</td>\n",
+       "      <td>0.596375</td>\n",
+       "      <td>0.144498</td>\n",
+       "      <td>98.25</td>\n",
+       "      <td>74.75</td>\n",
+       "      <td>14.00</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>39.076711</td>\n",
+       "      <td>-5.490011</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>UnfishedLow</td>\n",
+       "      <td>Slope</td>\n",
+       "      <td>Nyawira</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.462556</td>\n",
+       "      <td>-0.128136</td>\n",
+       "      <td>0.596375</td>\n",
+       "      <td>0.144498</td>\n",
+       "      <td>98.25</td>\n",
+       "      <td>74.75</td>\n",
+       "      <td>14.00</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>39.076711</td>\n",
+       "      <td>-5.490011</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>UnfishedLow</td>\n",
+       "      <td>Slope</td>\n",
+       "      <td>Nyawira</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.462556</td>\n",
+       "      <td>-0.128136</td>\n",
+       "      <td>0.596375</td>\n",
+       "      <td>0.144498</td>\n",
+       "      <td>98.25</td>\n",
+       "      <td>74.75</td>\n",
+       "      <td>14.00</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>39.054253</td>\n",
+       "      <td>-5.512514</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>UnfishedLow</td>\n",
+       "      <td>Lagoon/Back reef</td>\n",
+       "      <td>Nyawira</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.461297</td>\n",
+       "      <td>-0.134548</td>\n",
+       "      <td>0.629000</td>\n",
+       "      <td>0.011721</td>\n",
+       "      <td>112.75</td>\n",
+       "      <td>51.50</td>\n",
+       "      <td>183.75</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 42 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PU_ID     PU_Lat    PU_Lon  Number_of_genera   Country  \\\n",
+       "0      7  39.076711 -5.490011                35  Tanzania   \n",
+       "1      7  39.076711 -5.490011                22  Tanzania   \n",
+       "2      7  39.076711 -5.490011                25  Tanzania   \n",
+       "3      7  39.076711 -5.490011                26  Tanzania   \n",
+       "4     10  39.054253 -5.512514                27  Tanzania   \n",
+       "\n",
+       "                  Ecoregion   Management           Habitat Observer  Depth  \\\n",
+       "0  East African Coral Coast  UnfishedLow             Crest      Tim   11.0   \n",
+       "1  East African Coral Coast  UnfishedLow  Lagoon/Back reef  Nyawira    2.0   \n",
+       "2  East African Coral Coast  UnfishedLow             Slope  Nyawira    4.0   \n",
+       "3  East African Coral Coast  UnfishedLow             Slope  Nyawira    3.0   \n",
+       "4  East African Coral Coast  UnfishedLow  Lagoon/Back reef  Nyawira    1.5   \n",
+       "\n",
+       "   ...  SST_bimodality  SST_Skewness  ClimateStressModel   Netflow  Indegree  \\\n",
+       "0  ...        0.462556     -0.128136            0.596375  0.144498     98.25   \n",
+       "1  ...        0.462556     -0.128136            0.596375  0.144498     98.25   \n",
+       "2  ...        0.462556     -0.128136            0.596375  0.144498     98.25   \n",
+       "3  ...        0.462556     -0.128136            0.596375  0.144498     98.25   \n",
+       "4  ...        0.461297     -0.134548            0.629000  0.011721    112.75   \n",
+       "\n",
+       "   Outdegree  Retention  min_yr  max_yr  no_replicates  \n",
+       "0      74.75      14.00    2019    2019              1  \n",
+       "1      74.75      14.00    2010    2015              2  \n",
+       "2      74.75      14.00    2015    2015              1  \n",
+       "3      74.75      14.00    2016    2019              2  \n",
+       "4      51.50     183.75    2010    2019              3  \n",
+       "\n",
+       "[5 rows x 42 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# solve exercise here"
+    "# loading pandas\n",
+    "import pandas as pd\n",
+    "\n",
+    "# reading in the data\n",
+    "coral_div = pd.read_csv('https://knb.ecoinformatics.org/knb/d1/mn/v2/object/urn%3Auuid%3Ae7d12a5a-f1a9-4a3e-aaa5-5222f67e799d')\n",
+    "\n",
+    "# looking at the head of the data\n",
+    "print(coral_div.columns)\n",
+    "coral_div.head()"
    ]
   },
   {
@@ -383,8 +622,19 @@
    "language": "python",
    "name": "base"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
