--- a/hwk1-task3.ipynb
+++ b/hwk1-task3.ipynb
@@ -316,7 +316,6 @@
     "coral_div = pd.read_csv('https://knb.ecoinformatics.org/knb/d1/mn/v2/object/urn%3Auuid%3Ae7d12a5a-f1a9-4a3e-aaa5-5222f67e799d')\n",
     "\n",
     "# looking at the head of the data\n",
-    "print(coral_div.columns)\n",
     "coral_div.head()"
    ]
   },
@@ -343,67 +342,478 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(575, 42)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# a"
+    "# a\n",
+    "coral_div.shape\n",
+    "\n",
+    "# There are 575 rows and 42 columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PU_ID', 'PU_Lat', 'PU_Lon', 'Number_of_genera', 'Country', 'Ecoregion',\n",
+       "       'Management', 'Habitat', 'Observer', 'Depth', 'Coralcover',\n",
+       "       'SSTRateofRise', 'PARmax', 'Calcite', 'Dis_oxygen', 'mean.waveNRJ',\n",
+       "       'Salinity_mean', 'andrello_reef_value', 'andrello_nutrients',\n",
+       "       'mean.npp', 'TT_market_hrs', 'TT_pop_hrs', 'cumDHW', 'SST_Kurtosis',\n",
+       "       'SST_Median', 'ChlorA_median', 'andrello_sediments', 'Current_vel_mean',\n",
+       "       'Diff_attenuation', 'Grav_NP', 'Grav_NC', 'PH', 'SST_bimodality',\n",
+       "       'SST_Skewness', 'ClimateStressModel', 'Netflow', 'Indegree',\n",
+       "       'Outdegree', 'Retention', 'min_yr', 'max_yr', 'no_replicates'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# b"
+    "# b\n",
+    "coral_div.columns\n",
+    "\n",
+    "# This shows us just the column names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 575 entries, 0 to 574\n",
+      "Data columns (total 42 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   PU_ID                575 non-null    int64  \n",
+      " 1   PU_Lat               575 non-null    float64\n",
+      " 2   PU_Lon               575 non-null    float64\n",
+      " 3   Number_of_genera     575 non-null    int64  \n",
+      " 4   Country              575 non-null    object \n",
+      " 5   Ecoregion            575 non-null    object \n",
+      " 6   Management           575 non-null    object \n",
+      " 7   Habitat              530 non-null    object \n",
+      " 8   Observer             575 non-null    object \n",
+      " 9   Depth                575 non-null    float64\n",
+      " 10  Coralcover           575 non-null    int64  \n",
+      " 11  SSTRateofRise        575 non-null    float64\n",
+      " 12  PARmax               575 non-null    float64\n",
+      " 13  Calcite              575 non-null    float64\n",
+      " 14  Dis_oxygen           575 non-null    float64\n",
+      " 15  mean.waveNRJ         575 non-null    float64\n",
+      " 16  Salinity_mean        575 non-null    float64\n",
+      " 17  andrello_reef_value  575 non-null    int64  \n",
+      " 18  andrello_nutrients   575 non-null    float64\n",
+      " 19  mean.npp             575 non-null    float64\n",
+      " 20  TT_market_hrs        575 non-null    float64\n",
+      " 21  TT_pop_hrs           575 non-null    float64\n",
+      " 22  cumDHW               575 non-null    float64\n",
+      " 23  SST_Kurtosis         575 non-null    float64\n",
+      " 24  SST_Median           575 non-null    float64\n",
+      " 25  ChlorA_median        575 non-null    float64\n",
+      " 26  andrello_sediments   575 non-null    float64\n",
+      " 27  Current_vel_mean     567 non-null    float64\n",
+      " 28  Diff_attenuation     575 non-null    float64\n",
+      " 29  Grav_NP              575 non-null    float64\n",
+      " 30  Grav_NC              575 non-null    float64\n",
+      " 31  PH                   575 non-null    float64\n",
+      " 32  SST_bimodality       575 non-null    float64\n",
+      " 33  SST_Skewness         575 non-null    float64\n",
+      " 34  ClimateStressModel   575 non-null    float64\n",
+      " 35  Netflow              575 non-null    float64\n",
+      " 36  Indegree             575 non-null    float64\n",
+      " 37  Outdegree            575 non-null    float64\n",
+      " 38  Retention            575 non-null    float64\n",
+      " 39  min_yr               575 non-null    int64  \n",
+      " 40  max_yr               575 non-null    int64  \n",
+      " 41  no_replicates        575 non-null    int64  \n",
+      "dtypes: float64(30), int64(7), object(5)\n",
+      "memory usage: 188.8+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# c"
+    "# c\n",
+    "coral_div.info()\n",
+    "\n",
+    "# Shows the data type and non-null count for each column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PU_ID</th>\n",
+       "      <th>PU_Lat</th>\n",
+       "      <th>PU_Lon</th>\n",
+       "      <th>Number_of_genera</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Ecoregion</th>\n",
+       "      <th>Management</th>\n",
+       "      <th>Habitat</th>\n",
+       "      <th>Observer</th>\n",
+       "      <th>Depth</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SST_bimodality</th>\n",
+       "      <th>SST_Skewness</th>\n",
+       "      <th>ClimateStressModel</th>\n",
+       "      <th>Netflow</th>\n",
+       "      <th>Indegree</th>\n",
+       "      <th>Outdegree</th>\n",
+       "      <th>Retention</th>\n",
+       "      <th>min_yr</th>\n",
+       "      <th>max_yr</th>\n",
+       "      <th>no_replicates</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>39.076711</td>\n",
+       "      <td>-5.490011</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>UnfishedLow</td>\n",
+       "      <td>Crest</td>\n",
+       "      <td>Tim</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.462556</td>\n",
+       "      <td>-0.128136</td>\n",
+       "      <td>0.596375</td>\n",
+       "      <td>0.144498</td>\n",
+       "      <td>98.25</td>\n",
+       "      <td>74.75</td>\n",
+       "      <td>14.00</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>39.076711</td>\n",
+       "      <td>-5.490011</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>UnfishedLow</td>\n",
+       "      <td>Lagoon/Back reef</td>\n",
+       "      <td>Nyawira</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.462556</td>\n",
+       "      <td>-0.128136</td>\n",
+       "      <td>0.596375</td>\n",
+       "      <td>0.144498</td>\n",
+       "      <td>98.25</td>\n",
+       "      <td>74.75</td>\n",
+       "      <td>14.00</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>39.076711</td>\n",
+       "      <td>-5.490011</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>UnfishedLow</td>\n",
+       "      <td>Slope</td>\n",
+       "      <td>Nyawira</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.462556</td>\n",
+       "      <td>-0.128136</td>\n",
+       "      <td>0.596375</td>\n",
+       "      <td>0.144498</td>\n",
+       "      <td>98.25</td>\n",
+       "      <td>74.75</td>\n",
+       "      <td>14.00</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>39.076711</td>\n",
+       "      <td>-5.490011</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>UnfishedLow</td>\n",
+       "      <td>Slope</td>\n",
+       "      <td>Nyawira</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.462556</td>\n",
+       "      <td>-0.128136</td>\n",
+       "      <td>0.596375</td>\n",
+       "      <td>0.144498</td>\n",
+       "      <td>98.25</td>\n",
+       "      <td>74.75</td>\n",
+       "      <td>14.00</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>39.054253</td>\n",
+       "      <td>-5.512514</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>UnfishedLow</td>\n",
+       "      <td>Lagoon/Back reef</td>\n",
+       "      <td>Nyawira</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.461297</td>\n",
+       "      <td>-0.134548</td>\n",
+       "      <td>0.629000</td>\n",
+       "      <td>0.011721</td>\n",
+       "      <td>112.75</td>\n",
+       "      <td>51.50</td>\n",
+       "      <td>183.75</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>10</td>\n",
+       "      <td>39.054253</td>\n",
+       "      <td>-5.512514</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>UnfishedLow</td>\n",
+       "      <td>Lagoon/Back reef</td>\n",
+       "      <td>Tim</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.461297</td>\n",
+       "      <td>-0.134548</td>\n",
+       "      <td>0.629000</td>\n",
+       "      <td>0.011721</td>\n",
+       "      <td>112.75</td>\n",
+       "      <td>51.50</td>\n",
+       "      <td>183.75</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39.054253</td>\n",
+       "      <td>-5.535017</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>Restricted</td>\n",
+       "      <td>Crest</td>\n",
+       "      <td>Tim</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.461297</td>\n",
+       "      <td>-0.134548</td>\n",
+       "      <td>0.595600</td>\n",
+       "      <td>0.011721</td>\n",
+       "      <td>112.75</td>\n",
+       "      <td>51.50</td>\n",
+       "      <td>183.75</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>39</td>\n",
+       "      <td>39.009337</td>\n",
+       "      <td>-5.647518</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>East African Coral Coast</td>\n",
+       "      <td>UnfishedLow</td>\n",
+       "      <td>Lagoon/Back reef</td>\n",
+       "      <td>Nyawira</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.464874</td>\n",
+       "      <td>-0.158601</td>\n",
+       "      <td>0.626000</td>\n",
+       "      <td>-0.063087</td>\n",
+       "      <td>96.50</td>\n",
+       "      <td>40.75</td>\n",
+       "      <td>35.75</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 42 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PU_ID     PU_Lat    PU_Lon  Number_of_genera   Country  \\\n",
+       "0      7  39.076711 -5.490011                35  Tanzania   \n",
+       "1      7  39.076711 -5.490011                22  Tanzania   \n",
+       "2      7  39.076711 -5.490011                25  Tanzania   \n",
+       "3      7  39.076711 -5.490011                26  Tanzania   \n",
+       "4     10  39.054253 -5.512514                27  Tanzania   \n",
+       "5     10  39.054253 -5.512514                29  Tanzania   \n",
+       "6     15  39.054253 -5.535017                19  Tanzania   \n",
+       "7     39  39.009337 -5.647518                28  Tanzania   \n",
+       "\n",
+       "                  Ecoregion   Management           Habitat Observer  Depth  \\\n",
+       "0  East African Coral Coast  UnfishedLow             Crest      Tim   11.0   \n",
+       "1  East African Coral Coast  UnfishedLow  Lagoon/Back reef  Nyawira    2.0   \n",
+       "2  East African Coral Coast  UnfishedLow             Slope  Nyawira    4.0   \n",
+       "3  East African Coral Coast  UnfishedLow             Slope  Nyawira    3.0   \n",
+       "4  East African Coral Coast  UnfishedLow  Lagoon/Back reef  Nyawira    1.5   \n",
+       "5  East African Coral Coast  UnfishedLow  Lagoon/Back reef      Tim    1.5   \n",
+       "6  East African Coral Coast   Restricted             Crest      Tim    8.0   \n",
+       "7  East African Coral Coast  UnfishedLow  Lagoon/Back reef  Nyawira    3.0   \n",
+       "\n",
+       "   ...  SST_bimodality  SST_Skewness  ClimateStressModel   Netflow  Indegree  \\\n",
+       "0  ...        0.462556     -0.128136            0.596375  0.144498     98.25   \n",
+       "1  ...        0.462556     -0.128136            0.596375  0.144498     98.25   \n",
+       "2  ...        0.462556     -0.128136            0.596375  0.144498     98.25   \n",
+       "3  ...        0.462556     -0.128136            0.596375  0.144498     98.25   \n",
+       "4  ...        0.461297     -0.134548            0.629000  0.011721    112.75   \n",
+       "5  ...        0.461297     -0.134548            0.629000  0.011721    112.75   \n",
+       "6  ...        0.461297     -0.134548            0.595600  0.011721    112.75   \n",
+       "7  ...        0.464874     -0.158601            0.626000 -0.063087     96.50   \n",
+       "\n",
+       "   Outdegree  Retention  min_yr  max_yr  no_replicates  \n",
+       "0      74.75      14.00    2019    2019              1  \n",
+       "1      74.75      14.00    2010    2015              2  \n",
+       "2      74.75      14.00    2015    2015              1  \n",
+       "3      74.75      14.00    2016    2019              2  \n",
+       "4      51.50     183.75    2010    2019              3  \n",
+       "5      51.50     183.75    2015    2015              1  \n",
+       "6      51.50     183.75    2019    2019              1  \n",
+       "7      40.75      35.75    2015    2019              3  \n",
+       "\n",
+       "[8 rows x 42 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# d"
+    "# d\n",
+    "coral_div.head(n = 8)\n",
+    "\n",
+    "# The defult in head() is 5, but using the n argumnet, we can override the default and specify we want to see the first 8 rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['East African Coral Coast', 'Delagoa',\n",
+       "       'Northern Monsoon Current Coast', 'Mascarene Islands',\n",
+       "       'Western and Northern Madagascar', 'Seychelles'], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# e"
+    "# e\n",
+    "coral_div.Ecoregion.unique()\n",
+    "\n",
+    "# Shows the different Ecoregions in the data frame"
    ]
   },
   {
@@ -419,7 +829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Update this markdown cell with your answer.*"
+    "`int64` and `float64` are both numeric, but `float64` are numeric with decimals. If there are NaNs in a numeric column, the default will be `float64`."
    ]
   },
   {
@@ -435,7 +845,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Update this markdown cell with your answer.*"
+    "`coral_div.Country` returns just the Country column from the data frame as a series. `coral_div.Country.unique()` returns an array of the unique country names. "
    ]
   },
   {
