--- a/hwk1-task3.ipynb
+++ b/hwk1-task3.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "**UPDATE THIS LINK:**\n",
     "\n",
-    "[https://github.com/carmengg/eds-220-hwk-1]()\n"
+    "[https://github.com/shmuir/eds220-hwk-1]()\n"
    ]
   },
   {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -85,22 +85,6 @@
     }
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['PU_ID', 'PU_Lat', 'PU_Lon', 'Number_of_genera', 'Country', 'Ecoregion',\n",
-      "       'Management', 'Habitat', 'Observer', 'Depth', 'Coralcover',\n",
-      "       'SSTRateofRise', 'PARmax', 'Calcite', 'Dis_oxygen', 'mean.waveNRJ',\n",
-      "       'Salinity_mean', 'andrello_reef_value', 'andrello_nutrients',\n",
-      "       'mean.npp', 'TT_market_hrs', 'TT_pop_hrs', 'cumDHW', 'SST_Kurtosis',\n",
-      "       'SST_Median', 'ChlorA_median', 'andrello_sediments', 'Current_vel_mean',\n",
-      "       'Diff_attenuation', 'Grav_NP', 'Grav_NC', 'PH', 'SST_bimodality',\n",
-      "       'SST_Skewness', 'ClimateStressModel', 'Netflow', 'Indegree',\n",
-      "       'Outdegree', 'Retention', 'min_yr', 'max_yr', 'no_replicates'],\n",
-      "      dtype='object')\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -303,7 +287,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -356,7 +340,7 @@
        "(575, 42)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -393,7 +377,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -480,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -774,7 +758,7 @@
        "[8 rows x 42 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -804,7 +788,7 @@
        "       'Western and Northern Madagascar', 'Seychelles'], dtype=object)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -873,7 +857,7 @@
        "16"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -1238,7 +1222,7 @@
        "[9 rows x 42 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -1389,7 +1373,7 @@
        "[575 rows x 3 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -1696,7 +1680,7 @@
        "574  8.2400      35.301208  13.470000"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1717,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -1802,7 +1786,7 @@
        "100      35.250068  1082.196411               NaN"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1825,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -1907,7 +1891,7 @@
        "100          False     False              True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1932,10 +1916,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salinity_mean       False\n",
+       "mean.npp            False\n",
+       "Current_vel_mean     True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset.isna().any()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Update this markdown cell with your answer.*"
+    "This code looks at the subset of the data we made, finds if there are any NA values in each column, and shows TRUE or FALSE if there are or are not NA values in any column. "
    ]
   },
   {
@@ -1949,15 +1958,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Salinity_mean</th>\n",
+       "      <th>mean.npp</th>\n",
+       "      <th>Current_vel_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>35.250068</td>\n",
+       "      <td>1082.196411</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>35.250068</td>\n",
+       "      <td>1082.196411</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Salinity_mean     mean.npp  Current_vel_mean\n",
+       "99       35.250068  1082.196411               NaN\n",
+       "100      35.250068  1082.196411               NaN"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# solve exercise here"
+    "subset[subset['Current_vel_mean'].isna()] #selecting the wanted column, and returning columns where the value is NaN"
    ]
   }
  ],
