--- a/hwk1-task4.ipynb
+++ b/hwk1-task4.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "UPDATE THIS LINK:\n",
     "\n",
-    "https://github.com/carmengg/eds-220-hwk-1\n",
+    "https://github.com/shmuir/eds220-hwk-1\n",
     "\n",
     "In this task, make at least 5 commits at moments you think are adequate. We'll look at your repo to check commit history. Err on the side of commenting too much for now to get in the habit.\n",
     "\n",
@@ -52,15 +52,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>id</th>\n",
+       "      <th>place</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-01-31 23:53:37.000</td>\n",
+       "      <td>60.252000</td>\n",
+       "      <td>-152.7081</td>\n",
+       "      <td>90.20</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>ak11155107</td>\n",
+       "      <td>26km S of Redoubt Volcano, Alaska</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-01-31 23:48:35.452</td>\n",
+       "      <td>37.070300</td>\n",
+       "      <td>-115.1309</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.33</td>\n",
+       "      <td>nn00436847</td>\n",
+       "      <td>32km S of Alamo, Nevada</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-01-31 23:47:24.000</td>\n",
+       "      <td>64.671700</td>\n",
+       "      <td>-149.2528</td>\n",
+       "      <td>7.10</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>ak11151142</td>\n",
+       "      <td>12km NNW of North Nenana, Alaska</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-01-31 23:30:54.000</td>\n",
+       "      <td>63.188700</td>\n",
+       "      <td>-148.9575</td>\n",
+       "      <td>96.50</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>ak11151135</td>\n",
+       "      <td>22km S of Cantwell, Alaska</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-01-31 23:30:52.210</td>\n",
+       "      <td>32.616833</td>\n",
+       "      <td>-115.6925</td>\n",
+       "      <td>10.59</td>\n",
+       "      <td>1.34</td>\n",
+       "      <td>ci37171541</td>\n",
+       "      <td>10km WNW of Progreso, Mexico</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      time   latitude  longitude  depth   mag          id  \\\n",
+       "0  2014-01-31 23:53:37.000  60.252000  -152.7081  90.20  1.10  ak11155107   \n",
+       "1  2014-01-31 23:48:35.452  37.070300  -115.1309   0.00  1.33  nn00436847   \n",
+       "2  2014-01-31 23:47:24.000  64.671700  -149.2528   7.10  1.30  ak11151142   \n",
+       "3  2014-01-31 23:30:54.000  63.188700  -148.9575  96.50  0.80  ak11151135   \n",
+       "4  2014-01-31 23:30:52.210  32.616833  -115.6925  10.59  1.34  ci37171541   \n",
+       "\n",
+       "                               place        type  \n",
+       "0  26km S of Redoubt Volcano, Alaska  earthquake  \n",
+       "1            32km S of Alamo, Nevada  earthquake  \n",
+       "2   12km NNW of North Nenana, Alaska  earthquake  \n",
+       "3         22km S of Cantwell, Alaska  earthquake  \n",
+       "4       10km WNW of Progreso, Mexico  earthquake  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# solve exercise here"
+    "import pandas as pd\n",
+    "\n",
+    "raw_eqk = pd.read_csv('data/earthquake_data.csv')\n",
+    "\n",
+    "raw_eqk.head()"
    ]
   },
   {
@@ -77,15 +194,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(120108, 8)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "120108\n"
+     ]
+    }
+   ],
    "source": [
-    "# solve exercise here"
+    "#a.\n",
+    "print(raw_eqk.shape)\n",
+    "\n",
+    "#b.\n",
+    "print(type(raw_eqk))\n",
+    "\n",
+    "#c.\n",
+    "print(raw_eqk.shape[0]) # index to get the 1st value in shape (the rows)\n"
    ]
   },
   {
@@ -99,15 +234,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['earthquake', 'quarry blast', 'quarry', 'mining explosion',\n",
+       "       'rock burst', 'explosion', 'landslide', 'sonicboom', 'sonic boom',\n",
+       "       'anthropogenic event', 'acoustic noise'], dtype=object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# solve exercise here"
+    "raw_eqk.type.unique() # unique() gets unique instances of our selected column type"
    ]
   },
   {
@@ -125,16 +274,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
    "outputs": [],
-   "source": [
-    "# solve exercise here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -270,8 +418,19 @@
    "language": "python",
    "name": "base"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
