check over and comment

--- a/hwk1-task4.ipynb
+++ b/hwk1-task4.ipynb
@@ -175,9 +175,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "raw_eqk = pd.read_csv('data/earthquake_data.csv')\n",
+    "raw_eqk = pd.read_csv('data/earthquake_data.csv') # read in data\n",
     "\n",
-    "raw_eqk.head()"
+    "raw_eqk.head() # look at first 5 rows"
    ]
   },
   {
@@ -214,10 +214,10 @@
    ],
    "source": [
     "#a.\n",
-    "print(raw_eqk.shape)\n",
+    "print(raw_eqk.shape) # rows, columns\n",
     "\n",
     "#b.\n",
-    "print(type(raw_eqk))\n",
+    "print(type(raw_eqk)) # what kind of data type?\n",
     "\n",
     "#c.\n",
     "print(raw_eqk.shape[0]) # index to get the 1st value in shape (the rows)\n"
@@ -378,13 +378,13 @@
    ],
    "source": [
     "# a. \n",
-    "eqk = raw_eqk[raw_eqk.type == \"earthquake\"]\n",
+    "eqk = raw_eqk[raw_eqk.type == \"earthquake\"] # only earthquake\n",
     "\n",
     "# b.\n",
-    "eqk = eqk.set_index('id')\n",
+    "eqk = eqk.set_index('id') # this will make id the index column now\n",
     "\n",
     "# c. \n",
-    "eqk.head(n=3)"
+    "eqk.head(n=3) # n=3 will override the default number and show us the first 3 rows"
    ]
   },
   {
@@ -421,7 +421,7 @@
    "source": [
     "# solve exercise here\n",
     "\n",
-    "len(raw_eqk[raw_eqk.type != \"earthquake\"])"
+    "len(raw_eqk[raw_eqk.type != \"earthquake\"]) # len tells us how many rows, != is not equal to"
    ]
   },
   {
@@ -470,8 +470,8 @@
     }
    ],
    "source": [
-    "eqk.mag.plot(kind = 'hist',\n",
-    "            color = '#916772',\n",
+    "eqk.mag.plot(kind = 'hist', # can select just one column from the data and then plot directly\n",
+    "            color = '#916772', # update color\n",
     "            title = 'Earthquake magnitude frequency')"
    ]
   },
@@ -541,21 +541,23 @@
    ],
    "source": [
     "# a.\n",
-    "top20 = eqk.mag.nlargest(20).sort_values()\n",
+    "top20 = eqk.mag.nlargest(20).sort_values() # from eqk, select mag and then the largets 20 and then sort them\n",
     "\n",
     "#b.\n",
     "top20.plot(kind = 'bar',\n",
     "          title = \"Top 20 earthquakes with the largest magnitude\",\n",
     "          xlabel = \"Event ID\",\n",
     "          ylabel = \"Magnitude\",\n",
-    "          color = \"#916772\")"
+    "          color = \"#916772\") # update color\n",
+    "\n",
+    "# notice that since we did sort_values(), the bar plot is sorted"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Updating the index helps with plotting and resets the index when making a subset of data. The index tells us how we can access data in a data frame. Now instead of the earthquake magnitude being plotted with it's index number, we instead have the corresponding event ID on the x-axis. "
+    "`C.` Updating the index helps with plotting and resets the index when making a subset of data. The index tells us how we can access data in a data frame. Now instead of the earthquake magnitude being plotted with it's index number, we instead have the corresponding event ID on the x-axis. "
    ]
   },
   {
@@ -570,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {
     "vscode": {
      "languageId": "python"
@@ -759,13 +761,13 @@
        "usc000nzvd                94km NW of Iquique, Chile  8.2   25.00"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eqk.loc[top20.index,['place', 'mag', 'depth']]"
+    "eqk.loc[top20.index,['place', 'mag', 'depth']] # select rows of top20 and keep place, mag, and depth"
    ]
   },
   {
@@ -815,10 +817,12 @@
     "eqk.loc[eqk['mag']>5, ['mag', 'latitude', 'longitude']].plot(kind = 'scatter',\n",
     "                                                             x='longitude',\n",
     "                                                             y='latitude',\n",
-    "                                                            alpha = 0.5,\n",
-    "                                                            c = 'mag',\n",
-    "                                                            colormap='viridis',\n",
-    "                                                            title = 'Locations of earthquakes with magnitudes greater than 5')"
+    "                                                            alpha = 0.5, # change the alpha of of the points\n",
+    "                                                            c = 'mag', # colors by magnitude\n",
+    "                                                            colormap='viridis', # different color map\n",
+    "                                                            title = 'Locations of earthquakes with magnitudes greater than 5')\n",
+    "\n",
+    "# filter for mag > 5 and select columns mag, latitude, longitude and then plot"
    ]
   }
  ],
