added to description and finished

--- a/hwk1-task3.ipynb
+++ b/hwk1-task3.ipynb
@@ -50,7 +50,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This data set was used for current and future ML predictions of coral counts in the Western Indian Ocean based on climactic and environmental variables. These include, salinity, chlorophyll-a, dissovled oxygen, etc. \n",
+    "**Description**:  \n",
+    "This data set was used for current and future ML predictions of coral counts in the Western Indian Ocean based on climactic and environmental variables. These include, salinity, chlorophyll-a, dissovled oxygen, etc. Corals were collected by many different people, spanning 1001 sites. The data is used to help inform conservation efforts of coral reefs.  \n",
     "\n",
     "**Citation**:  \n",
     "Tim McClanahan. (2023). Western Indian Ocean Coral Diversity. Knowledge Network for Biocomplexity. doi:10.5063/F1K35S3H.\n",
@@ -863,7 +864,7 @@
     }
    ],
    "source": [
-    "len(coral_div.Observer.unique())"
+    "len(coral_div.Observer.unique()) # len returns the number of rows, unique() is the unique values"
    ]
   },
   {
@@ -1958,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "vscode": {
      "languageId": "python"
@@ -2014,7 +2015,7 @@
        "100      35.250068  1082.196411               NaN"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
